--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,10 @@
 @tailwind components;
 @tailwind utilities;
 
+body{
+  overflow-y: scroll;
+}
+
 @layer base {
   :root {
     --background: 220 20% 97%;
